--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,23 @@
-# Done to increase the memory available to gradle.
+# Gradle settings
 org.gradle.jvmargs=-Xmx1G
 org.gradle.parallel=true
 
-# Fabric Properties
-# check these on https://fabricmc.net/develop
+# Project Properties
 minecraft_version=1.20.1
+enabled_platforms=fabric
+
+# Mod Properties
+mod_id = terraccessories
+archives_base_name=terraccessories
+maven_group=net.hezaerd.terraccessories
+mod_version=0.0.1
+
+# Loader Properties
 yarn_mappings=1.20.1+build.10
 loader_version=0.15.7
 
-# Mod Properties
-mod_version=1.0.0
-maven_group=net.hezaerd.terraccessories
-archives_base_name=terraccessories
-
 # Dependencies
 fabric_version=0.92.0+1.20.1
+fabric_api_version=0.48.0+1.20.1
+
+trinkets_version=3.7.1
