Add owo-lib and basic config placeholder

--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,10 @@ repositories {
 		name = "Ladysnake Libs"
 		url = 'https://maven.ladysnake.org/releases'
 	}
+	maven {
+		name = "wispforest"
+		url = 'https://maven.wispforest.io'
+	}
 }
 
 fabricApi {
@@ -36,6 +40,10 @@ dependencies {
 	
 	// Trinkets
 	modImplementation "dev.emi:trinkets:${project.trinkets_version}"
+
+	// owo-lib
+	annotationProcessor modImplementation("io.wispforest:owo-lib:${project.owo_version}")
+	include "io.wispforest:owo-sentinel:${project.owo_version}"
 }
 
 processResources {
