--- a/gradle.properties
+++ b/gradle.properties
@@ -20,5 +20,6 @@ loader_version=0.15.7
 fabric_version=0.92.0+1.20.1
 fabric_api_version=0.48.0+1.20.1
 
+modmenu_version=7.2.2
 trinkets_version=3.7.1
 owo_version=0.11.2-pre.9+1.20
